force-app/main/default/objects/Contact/fields/Account_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>