force-app/main/default/objects/Contact/fields/AccountExternalId__c.field-meta.xml
<CustomField>
    <fullName>AccountExternalId__c</fullName>
    <formula>Account.External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ExternalId</label>
    <type>Text</type>
</CustomField>