force-app/main/default/objects/Contact/fields/Associated_Company__c.field-meta.xml
<CustomField>
    <fullName>Associated_Company__c</fullName>
    <label>Associated Company</label>
    <type>TextArea</type>
</CustomField>