force-app/main/default/objects/Contact/fields/Associated_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Associated_Company_ID__c</fullName>
    <label>Associated Company ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>