force-app/main/default/objects/Contact/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <label>Contact ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>