force-app/main/default/objects/Contact/fields/Create_Messaging_User__c.field-meta.xml
<CustomField>
    <fullName>Create_Messaging_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manually creates a messaging user if the contact is eligible. This checkbox is only used to trigger a flow that creates a messaging user related to contact.</description>
    <label>Create Messaging User</label>
    <type>Checkbox</type>
</CustomField>