force-app/main/default/objects/Contact/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>Customer Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>