force-app/main/default/objects/Contact/fields/How_many_properties_do_you_manage__c.field-meta.xml
<CustomField>
    <fullName>How_many_properties_do_you_manage__c</fullName>
    <label>How many properties do you manage?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>