force-app/main/default/objects/Contact/fields/Inactive_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inactive Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inactive Contacts</relationshipLabel>
    <relationshipName>Inactive_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>