force-app/main/default/objects/Contact/fields/Interested_Services__c.field-meta.xml
<CustomField>
    <fullName>Interested_Services__c</fullName>
    <label>Interested Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interested_Service</valueSetName>
    </valueSet>
</CustomField>