force-app/main/default/objects/Contact/fields/is_primary_contact__c.field-meta.xml
<CustomField>
    <fullName>is_primary_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean to identify primary contact related to account.</description>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>