force-app/main/default/objects/Contact/fields/IsSoftDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsSoftDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Soft Deleted</label>
    <type>Checkbox</type>
</CustomField>