force-app/main/default/objects/Contact/fields/Market_Association__c.field-meta.xml
<CustomField>
    <fullName>Market_Association__c</fullName>
    <description>Use for identifying contact market or corporate association.</description>
    <inlineHelpText>What market do they work in or are they part of the Corporate management?</inlineHelpText>
    <label>Market Association</label>
    <length>200</length>
    <type>Text</type>
</CustomField>