force-app/main/default/objects/Contact/fields/Number_of_properties_for_the_quote__c.field-meta.xml
<CustomField>
    <fullName>Number_of_properties_for_the_quote__c</fullName>
    <label>Number of properties for the quote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>