force-app/main/default/objects/Contact/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <description>Pulls the onboarding status from the related account to provide reliable filtering for lightning page filter on the VisualForce status component.</description>
    <formula>TEXT(Account.Contractor_Onboarding_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Status</label>
    <type>Text</type>
</CustomField>