force-app/main/default/objects/Contact/fields/Original_Source_web__c.field-meta.xml
<CustomField>
    <fullName>Original_Source_web__c</fullName>
    <label>Original Source (web)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>