force-app/main/default/objects/Contact/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <description>For capturing the preferred name of the related contact.</description>
    <inlineHelpText>This field is to capture the preferred name for the related contact.</inlineHelpText>
    <label>Preferred Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>