force-app/main/default/objects/Contact/fields/Property_Portfolio_Mgmt_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Portfolio_Mgmt_Type__c</fullName>
    <label>Property Portfolio / Mgmt Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Portfolio_Mgmt_Type</valueSetName>
    </valueSet>
</CustomField>