force-app/main/default/objects/Contact/fields/PublicID__c.field-meta.xml
<CustomField>
    <fullName>PublicID__c</fullName>
    <label>PublicID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>