force-app/main/default/objects/Contact/fields/Scoping_Tool_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Scoping_Tool_Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies users who clients have authorized to use the Scoping Tool for ordering.</description>
    <label>Scoping Tool Authorized</label>
    <type>Checkbox</type>
</CustomField>