force-app/main/default/objects/Contact/fields/SMS_Eligible__c.field-meta.xml
<CustomField>
    <fullName>SMS_Eligible__c</fullName>
    <description>If the contact is eligible to receive SMS messages</description>
    <formula>OR(
Account.RecordType.Name  = &quot;Contractor&quot;,

     AND(
        Account.Has_Accepted_Contractor_Agreement__c = True,
     OR(
       MobilePhone = Account.Primary_Phone_From_Agreement__c,
       MobilePhone = Account.Secondary_Phone_From_Agreement__c))
)</formula>
    <label>SMS Eligible</label>
    <type>Checkbox</type>
</CustomField>