force-app/main/default/objects/Contact/fields/SMS_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SMS_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Enabled (Not Active)</label>
    <type>Checkbox</type>
</CustomField>