force-app/main/default/objects/Contact/fields/TaskEasy_Login__c.field-meta.xml
<CustomField>
    <fullName>TaskEasy_Login__c</fullName>
    <label>TaskEasy Login</label>
    <type>Email</type>
</CustomField>