force-app/main/default/objects/Contact/fields/Total_Property_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Property_Count__c</fullName>
    <label>Total Property Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>