force-app/main/default/objects/Contact/fields/Tradeshow_Seen_At__c.field-meta.xml
<CustomField>
    <fullName>Tradeshow_Seen_At__c</fullName>
    <label>Tradeshow Seen At</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IMN NPL/Notes East 2019</fullName>
            </value>
            <value>
                <fullName>MBA National 2019</fullName>
            </value>
            <value>
                <fullName>NARPM Broker/Owner 2019</fullName>
            </value>
            <value>
                <fullName>IMN SFR East 2019</fullName>
            </value>
            <value>
                <fullName>IMN RealTECH 2019</fullName>
            </value>
            <value>
                <fullName>IMN Res Prop Mgmt 2019</fullName>
            </value>
            <value>
                <fullName>5 Star Expo 2019</fullName>
            </value>
            <value>
                <fullName>NARPM Annual 2019</fullName>
            </value>
            <value>
                <fullName>IMN SFR West 2019</fullName>
            </value>
            <value>
                <fullName>IMN SFR West 2018</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>