force-app/main/default/objects/Contact/fields/What_services_are_you_interested_in__c.field-meta.xml
<CustomField>
    <fullName>What_services_are_you_interested_in__c</fullName>
    <label>What services are you interested in?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lawn mowing</fullName>
            </value>
            <value>
                <fullName>Aeration</fullName>
            </value>
            <value>
                <fullName>Fertilization</fullName>
            </value>
            <value>
                <fullName>Fall/Spring Cleanup</fullName>
            </value>
            <value>
                <fullName>Gutter Cleaning</fullName>
            </value>
            <value>
                <fullName>Shrub/Tree Trimming</fullName>
            </value>
            <value>
                <fullName>Property Condition Reports</fullName>
            </value>
            <value>
                <fullName>Snow Removal</fullName>
            </value>
            <value>
                <fullName>Desertscaping</fullName>
            </value>
            <value>
                <fullName>Sales Clean</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Pool Cleaning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>