force-app/main/default/objects/Contact/fields/What_type_of_property_needs_service__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_property_needs_service__c</fullName>
    <label>What type of property needs service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>What_type_of_property_needs_service</valueSetName>
    </valueSet>
</CustomField>