force-app/main/default/objects/Contact/fields/Which_Best_Describes_You__c.field-meta.xml
<CustomField>
    <fullName>Which_Best_Describes_You__c</fullName>
    <description>Used for the website chat widget pre-chat questions.</description>
    <label>Which Best Describes You?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Which_Best_Describes_You</valueSetName>
    </valueSet>
</CustomField>