force-app/main/default/objects/Contact/recordTypes/Consumer_Contact.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Contact</fullName>
    <active>true</active>
    <label>Consumer Contact</label>
</RecordType>