force-app/main/default/objects/Contact/recordTypes/Contractor_Owner.recordType-meta.xml
<RecordType>
    <fullName>Contractor_Owner</fullName>
    <active>true</active>
    <label>Contractor Owner</label>
</RecordType>