force-app/main/default/objects/Contact/recordTypes/Contractor_Team_Member.recordType-meta.xml
<RecordType>
    <fullName>Contractor_Team_Member</fullName>
    <active>true</active>
    <label>Contractor Team Member</label>
</RecordType>