force-app/main/default/objects/Contact/recordTypes/Customer_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Customer_Inquiry</fullName>
    <active>true</active>
    <description>Customer Inquiries created from various channels - chat etc.</description>
    <label>Customer Inquiry</label>
</RecordType>