force-app/main/default/objects/Contact/validationRules/Invalid_values.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_values</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Text(Status__c) != &apos;Active&apos;, Text(Status__c) != &apos;Inactive&apos;, Text(Status__c) != &apos;Deleted&apos;, Text(Status__c) != &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Invalid field value</errorMessage>
</ValidationRule>