force-app/main/default/objects/Contact/listViews/Active_Contact_Conversion.listView-meta.xml
<ListView>
    <fullName>Active_Contact_Conversion</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Active__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>HMC Assets</value>
    </filters>
    <label>Active Contact Conversion</label>
    <sharedTo>
        <role>Account_Management</role>
    </sharedTo>
</ListView>