force-app/main/default/objects/Contact/listViews/Andrea_Clients.listView-meta.xml
<ListView>
    <fullName>Andrea_Clients</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Conrex,Pathlight,Invitation Homes,Circle K,HMC,BLM,Great Jones,Streetlane</value>
    </filters>
    <label>Andrea Clients</label>
</ListView>