force-app/main/default/objects/Contact/listViews/Jenica_Clients.listView-meta.xml
<ListView>
    <fullName>Jenica_Clients</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>MSR,Mainstreet,Main Street,FirstKey,First Key,HavenBrook,Tricon</value>
    </filters>
    <label>Jenica Clients</label>
</ListView>