force-app/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<ListView>
    <fullName>MyContacts</fullName>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Create_Date__c</columns>
    <columns>CONTACT.LEAD_SOURCE</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>Opportunity_Origination__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Contractor_Owner</value>
    </filters>
    <label>My Contacts</label>
</ListView>