force-app/main/default/objects/Contact/listViews/Robert_Clients.listView-meta.xml
<ListView>
    <fullName>Robert_Clients</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Redfin,Offerpad,Zillow,GOAL,Gorelick,Second Ave</value>
    </filters>
    <label>Robert Clients</label>
</ListView>