force-app/main/default/objects/Contact/listViews/Sales_Contacts.listView-meta.xml
<ListView>
    <fullName>Sales_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account.Create_Date__c</columns>
    <columns>Create_Date__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>steve,gary,theo,ty</value>
    </filters>
    <label>Sales Contacts</label>
</ListView>