force-app/main/default/objects/Contact/listViews/Sales_To_Contact.listView-meta.xml
<ListView>
    <fullName>Sales_To_Contact</fullName>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account.Create_Date__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>Create_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>steve,gary,theo,ty</value>
    </filters>
    <filters>
        <field>ACCOUNT.LAST_ACTIVITY</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>1/10/2020 12:00 AM</value>
    </filters>
    <label>Sales To Contact</label>
</ListView>