force-app/main/default/objects/Contact/listViews/Scoping_Tool_Authorized_Users.listView-meta.xml
<ListView>
    <fullName>Scoping_Tool_Authorized_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Scoping_Tool_Authorized__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scoping_Tool_Authorized__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Scoping Tool Authorized Users</label>
</ListView>